부트스트랩 활용 홈페이지

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                             <div class="card-body p-4">
                                 <div class="text-center">
                                     <!-- Product name-->
-                                    <h5 class="fw-bolder">Sale Item</h5>
+                                    <h5 class="fw-bolder">할인 상품</h5>
                                     <!-- Product price-->
                                     <span class="text-muted text-decoration-line-through">$50.00</span>
                                     $25.00
@@ -266,3 +266,4 @@
         <script src="js/scripts.js"></script>
     </body>
 </html>
+
